--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.baseurl}}/css/jquery.fancybox-1.3.4.css"/>
         <link rel="stylesheet" href="{{ site.baseurl}}/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/form.css" />
         <link rel="stylesheet" href="{{ site.baseurl}}/css/style.css" /> 
         <link rel="stylesheet" href="{{ site.baseurl}}/css/epicfullscreen.css" />
         <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_shortcodes.css" />
@@ -30,8 +31,16 @@
         <script type="text/javascript" src="{{ site.baseurl}}/js/onepage.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/subscribe.js"></script>        
+        
+        
+        <!-- // <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script> -->
+        <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>= 
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script>
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
+         
+        
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
         
