updated the form css for the front page

--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -44,12 +44,8 @@
             <li class="form-line" id="id_5">
               <div id="cid_5" class="form-input-wide">
                 <div style="text-align:left" class="form-buttons-wrapper">
-                  <button id="input_5" type="submit" class="form-submit-button submit submitTheme" style="margin-right: 20px;">    <!-- updated class with: submit submitTheme -->
+                  <button id="input_5" type="submit" class="form-submit-button submit submitTheme" style="margin-right: 20px;">
                     SEND
-                  </button>
-                  &nbsp;
-                  <button id="input_reset_5" type="reset" class="form-submit-reset submit submitTheme">  <!--  update class with: submit submitTheme -->
-                    Clear Form
                   </button>
                 </div>
               </div>
