--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,12 +32,12 @@
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
         
-        
-        <!-- // <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script> -->
-        <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>= 
+        <!-- <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script>--> 
+        <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script> 
         <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script>
+        
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
          
         
@@ -80,8 +80,7 @@
 
         				 });	
         			});
-
-
+              
         			 //twitter
         			 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 
