updated all the dependencies for the submit form, built a unique CSS file for it and got rid of the javascript that was screwing up the home page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />        
+        
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.baseurl}}/css/syntax.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.baseurl}}/css/jquery.fancybox-1.3.4.css"/>
         <link rel="stylesheet" href="{{ site.baseurl}}/css/main.css">
-        <link rel="stylesheet" href="{{ site.baseurl}}/css/form.css" />
+        <!-- <link rel="stylesheet" href="{{ site.baseurl}}/css/form.css" /> -->
         <link rel="stylesheet" href="{{ site.baseurl}}/css/style.css" /> 
         <link rel="stylesheet" href="{{ site.baseurl}}/css/epicfullscreen.css" />
         <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_shortcodes.css" />
@@ -32,11 +32,11 @@
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
         
-        <!-- <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script>--> 
+        <!-- <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script> 
         <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script> 
-        <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script>-->
         
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
          
