--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@
 	.blog-post-content .blog-post-type {
 	  width:45px;
 	  height:45px;
-	  background:#FC7022 url(../images/post-type.png) 0 0 no-repeat;
+	  background:#E56869 url(../images/post-type.png) 0 0 no-repeat;
 	  float:left; 
 	  margin-right:20px;
 	}
