--- a/_includes/header_tutorials.html
+++ b/_includes/header_tutorials.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="{{ site.baseurl}}/css/style.css" /> 
         <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_shortcodes.css" />
         <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_media_queries.css" />
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/button-groups.css" />
+        
         
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css' />
         <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css' />
@@ -24,7 +26,9 @@
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.lazyload.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/bootstrap.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
+        
         <script type="text/javascript" src="{{ site.baseurl}}/js/udt_shortcodes.js"></script>
         
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
