--- a/_includes/header_tutorials.html
+++ b/_includes/header_tutorials.html
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/bootstrap.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
-        
+        <script type="text/javascript" src="{{ site.baseurl}}/js/raphael.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/udt_shortcodes.js"></script>
         
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
@@ -65,14 +65,7 @@
         			//tweet buttons
         			 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
                
-               
-               //jotform functionality
-               JotForm.init(function(){
-                  $('input_1').hint('Your Name');
-                  $('input_2').hint('Your Email');
-                  $('input_4').hint('Your Message');
-               });
-
+              
 
 
         </script>
@@ -109,4 +102,4 @@
               </ul> <!-- end navigation  -->
       		  </div> <!-- end inner  -->
           </div> <!-- end header header-main clearfix -->
-          <!--end header--> 
+          <!--end header-->
