--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -4,7 +4,7 @@
     <!--content-left-->
     <div class="content-inner-left">
       <h1><span>Get in touch!</span></h1>
-      <p>Reach out, we're happy to hear from you!</p>      
+      <p class="mg-bottom-15">Reach out, we're happy to hear from you!</p>      
       
       <!-- THIS IS THE NEW FORM -->
       <form class="jotform-form" action="http://submit.jotform.us/submit.php" method="post" name="form_40871082820148" id="40871082820148" accept-charset="utf-8">
