--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -19,20 +19,25 @@
         
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css' />
         <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css' />
-    
+            
+        
+        
         <!-- Javascript -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.lazyload.js"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
+        
+        <!-- Javascript -->
+        <!--<script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script> --> 
+        <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>        
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>    
+        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script>  
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script> 
+        
         <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
         <script type="text/javascript" src="{{ site.baseurl}}/js/udt_shortcodes.js"></script>
         
-        <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script>
-        <script type="text/javascript" src="{{ site.baseurl}}/js/jotform.js?v=3.2.1171"></script>
+        
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
