--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.lazyload.js"></script>
         
         <!-- Javascript -->
-        <!--<script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script> --> 
+        <script type="text/javascript" src="{{ site.baseurl}}/js/prototype.js?v=3.2.1171"></script> 
         <script type="text/javascript" src="{{ site.baseurl}}/js/json2.js?v=3.2.1171"></script>        
         <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus.js?v=3.2.1171"></script>    
         <script type="text/javascript" src="{{ site.baseurl}}/js/protoplus-ui.js?v=3.2.1171"></script>  
