--- a/css/epicfullscreen.css
+++ b/css/epicfullscreen.css
@@ -2,7 +2,7 @@
 	Skin Name: base
 	Description: Skin for epicFullscreen plugin
 	Version: 1.0
-	Author: unlimitDesign
+	Author: unlimitDesign, curve
 	*/
 
 
