--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@
     max-width:870px;
     margin:auto;
     padding:100px 0;
+    padding: 100px 0 25px 0;
 	}
 	.page .content.centeralign {
 	  text-align:center;
@@ -1719,127 +1720,22 @@
  }
  
  .circular {
-  margin: auto;
- 	width: 99px;
- 	height: 99px;
- 	border-radius: 150px;
- 	-webkit-border-radius: 150px;
- 	-moz-border-radius: 150px;
- 	background: url(http://link-to-your/image.jpg) no-repeat #bbb;
+    margin: auto;
+   	width: 99px;
+   	height: 99px;
+   	border-radius: 150px;
+   	-webkit-border-radius: 150px;
+   	-moz-border-radius: 150px;
+   	background: url(http://link-to-your/image.jpg) no-repeat #bbb;
  	}
 
  .circular img {
- 	opacity: 0;
- 	filter: alpha(opacity=0);
+   	opacity: 0;
+   	filter: alpha(opacity=0);
  	}
  	
- 	.pd-5  { padding: 5px}
- 	.pd-10 { padding: 10px}
- 	.pd-15 { padding: 15px}
- 	.pd-20 { padding: 20px}
- 	.pd-25 { padding: 25px}
- 	.pd-30 { padding: 30px}
- 	.pd-35 { padding: 35px}
- 	.pd-40 { padding: 40px}
- 	.pd-45 { padding: 45px}
- 	.pd-50 { padding: 50px}
- 	.pd-55 { padding: 55px}
- 	.pd-60 { padding: 60px}
- 	.pd-65 { padding: 65px} 
- 	.pd-70 { padding: 70px}
- 	.pd-75 { padding: 75px}
- 	.pd-80 { padding: 80px}
- 	.pd-85 { padding: 85px}
- 	.pd-90 { padding: 90px}
- 	.pd-95 { padding: 95px}
- 	.pd-100{ padding: 100px}
  	
- 	.pd-5-r  { padding-right: 5px}
- 	.pd-10-r { padding-right: 10px}
- 	.pd-15-r { padding-right: 15px}
- 	.pd-20-r { padding-right: 20px}
- 	.pd-25-r { padding-right: 25px}
- 	.pd-30-r { padding-right: 30px}
- 	.pd-35-r { padding-right: 35px}
- 	.pd-40-r { padding-right: 40px}
- 	.pd-45-r { padding-right: 45px}
- 	.pd-50-r { padding-right: 50px}
- 	.pd-55-r { padding-right: 55px}
- 	.pd-60-r { padding-right: 60px}
- 	.pd-65-r { padding-right: 65px} 
- 	.pd-70-r { padding-right: 70px}
- 	.pd-75-r { padding-right: 75px}
- 	.pd-80-r { padding-right: 80px}
- 	.pd-85-r { padding-right: 85px}
- 	.pd-90-r { padding-right: 90px}
- 	.pd-95-r { padding-right: 95px}
- 	.pd-100-r{ padding-right: 100px}
- 	
- 	.pd-5-l  { padding-left: 5px}
- 	.pd-10-l { padding-left: 10px}
- 	.pd-15-l { padding-left: 15px}
- 	.pd-20-l { padding-left: 20px}
- 	.pd-25-l { padding-left: 25px}
- 	.pd-30-l { padding-left: 30px}
- 	.pd-35-l { padding-left: 35px}
- 	.pd-40-l { padding-left: 40px}
- 	.pd-45-l { padding-left: 45px}
- 	.pd-50-l { padding-left: 50px}
- 	.pd-55-l { padding-left: 55px}
- 	.pd-60-l { padding-left: 60px}
- 	.pd-65-l { padding-left: 65px} 
- 	.pd-70-l { padding-left: 70px}
- 	.pd-75-l { padding-left: 75px}
- 	.pd-80-l { padding-left: 80px}
- 	.pd-85-l { padding-left: 85px}
- 	.pd-90-l { padding-left: 90px}
- 	.pd-95-l { padding-left: 95px}
- 	.pd-100-l{ padding-left: 100px}
- 	
- 	
- 	.pd-5-top  { padding-top: 5px}     
- 	.pd-10-top { padding-top: 10px}
- 	.pd-15-top { padding-top: 15px}
- 	.pd-20-top { padding-top: 20px}
- 	.pd-25-top { padding-top: 25px}
- 	.pd-30-top { padding-top: 30px}
- 	.pd-35-top { padding-top: 35px}
- 	.pd-40-top { padding-top: 40px}
- 	.pd-45-top { padding-top: 45px}
- 	.pd-50-top { padding-top: 50px}
- 	.pd-55-top { padding-top: 55px}
- 	.pd-60-top { padding-top: 60px}
- 	.pd-65-top { padding-top: 65px} 
- 	.pd-70-top { padding-top: 70px}
- 	.pd-75-top { padding-top: 75px}
- 	.pd-80-top { padding-top: 80px}
- 	.pd-85-top { padding-top: 85px}
- 	.pd-90-top { padding-top: 90px}
- 	.pd-95-top { padding-top: 95px}
- 	.pd-100-top{ padding-top: 100px}
- 	
- 	.mg-bottom-0  { margin-bottom: 0px;}
- 	.mg-bottom-5  { margin-bottom: 5px;}
- 	.mg-bottom-10 { margin-bottom: 10px;}
- 	.mg-bottom-15 { margin-bottom: 15px;}
- 	.mg-bottom-20 { margin-bottom: 20px;}
- 	.mg-bottom-25 { margin-bottom: 25px;}
- 	.mg-bottom-30 { margin-bottom: 30px;}
- 	.mg-bottom-35 { margin-bottom: 35px;}
- 	.mg-bottom-40 { margin-bottom: 40px;}
- 	.mg-bottom-45 { margin-bottom: 45px;}
- 	.mg-bottom-50 { margin-bottom: 50px;}
- 	.mg-bottom-55 { margin-bottom: 55px;}
- 	.mg-bottom-60 { margin-bottom: 60px;}
- 	.mg-bottom-65 { margin-bottom: 65px;} 
- 	.mg-bottom-70 { margin-bottom: 70px;}
- 	.mg-bottom-75 { margin-bottom: 75px;}
- 	.mg-bottom-80 { margin-bottom: 80px;}
- 	.mg-bottom-85 { margin-bottom: 85px;}
- 	.mg-bottom-90 { margin-bottom: 90px;}
- 	.mg-bottom-95 { margin-bottom: 95px;}
- 	.mg-bottom-100{ margin-bottom: 100px;}
- 	
+ 	/*TUTORIAL ASSETS */
  	 .cheat-sheets .red-bkgrnd {
       background-color: #A80000;
       -webkit-border-radius: 15px;
@@ -1847,18 +1743,18 @@
       border-radius: 15px;
       padding: 10px 20px 30px 20px;
       margin: 0px;
-      overflow: visible;    
+      overflow: visible;
+      min-height: 370px;    
   }
   
   .cheat-sheets span.strong.em {
     font-weight: 600;
-    font-style: italic;
-    padding-right: 3px;
-    color: #D10000;
+    font-size: 16px;
+    color: #0590A6;   /*blue for sass*/
   }
   .cheat-sheets span.strong {
     font-weight: 600;
-    color: #D10000;
+    color: #0590A6;   /*blue for sass*/
   }
   
   .coding h6.steps {
@@ -1870,7 +1766,7 @@
     padding-left: 10px;
     font-size: 100%;
     font-weight: 500;
-  }
+  }  
   .git-map {
     background-color: #CDCFD0;
     height: 410px;
@@ -1960,6 +1856,9 @@
   .gem {
     max-width: 170%;
   }
+  
+  
+  /*Social Media Assets */
   #tweet {
     background-image: url("/images/jewels.png");
     background-size: 67px;
@@ -1981,5 +1880,114 @@
     position: relative;
   }
  	
- 
-				
+ 	.brdr-rad-5  { border-radius: 5px;  }
+ 	.brdr-rad-10 { border-radius: 10px; }
+ 	.brdr-rad-15 { border-radius: 15px; }
+ 	
+ 	/*Misc. Padding and Margins */
+ 	.pd-5  { padding: 5px;}
+ 	.pd-10 { padding: 10px;}
+ 	.pd-15 { padding: 15px;}
+ 	.pd-20 { padding: 20px;}
+ 	.pd-25 { padding: 25px;}
+ 	.pd-30 { padding: 30px;}
+ 	.pd-35 { padding: 35px;}
+ 	.pd-40 { padding: 40px;}
+ 	.pd-45 { padding: 45px;}
+ 	.pd-50 { padding: 50px;}
+ 	.pd-55 { padding: 55px;}
+ 	.pd-60 { padding: 60px;}
+ 	.pd-65 { padding: 65px;} 
+ 	.pd-70 { padding: 70px;}
+ 	.pd-75 { padding: 75px;}
+ 	.pd-80 { padding: 80px;}
+ 	.pd-85 { padding: 85px;}
+ 	.pd-90 { padding: 90px;}
+ 	.pd-95 { padding: 95px;}
+ 	.pd-100{ padding: 100px;}
+ 	
+ 	.pd-5-r  { padding-right: 5px;}
+ 	.pd-10-r { padding-right: 10px;}
+ 	.pd-15-r { padding-right: 15px;}
+ 	.pd-20-r { padding-right: 20px;}
+ 	.pd-25-r { padding-right: 25px;}
+ 	.pd-30-r { padding-right: 30px;}
+ 	.pd-35-r { padding-right: 35px;}
+ 	.pd-40-r { padding-right: 40px;}
+ 	.pd-45-r { padding-right: 45px;}
+ 	.pd-50-r { padding-right: 50px;}
+ 	.pd-55-r { padding-right: 55px;}
+ 	.pd-60-r { padding-right: 60px;}
+ 	.pd-65-r { padding-right: 65px;} 
+ 	.pd-70-r { padding-right: 70px;}
+ 	.pd-75-r { padding-right: 75px;}
+ 	.pd-80-r { padding-right: 80px;}
+ 	.pd-85-r { padding-right: 85px;}
+ 	.pd-90-r { padding-right: 90px;}
+ 	.pd-95-r { padding-right: 95px;}
+ 	.pd-100-r{ padding-right: 100px;}
+ 	
+ 	.pd-5-l  { padding-left: 5px;}
+ 	.pd-10-l { padding-left: 10px;}
+ 	.pd-15-l { padding-left: 15px;}
+ 	.pd-20-l { padding-left: 20px;}
+ 	.pd-25-l { padding-left: 25px;}
+ 	.pd-30-l { padding-left: 30px;}
+ 	.pd-35-l { padding-left: 35px;}
+ 	.pd-40-l { padding-left: 40px;}
+ 	.pd-45-l { padding-left: 45px;}
+ 	.pd-50-l { padding-left: 50px;}
+ 	.pd-55-l { padding-left: 55px;}
+ 	.pd-60-l { padding-left: 60px;}
+ 	.pd-65-l { padding-left: 65px;} 
+ 	.pd-70-l { padding-left: 70px;}
+ 	.pd-75-l { padding-left: 75px;}
+ 	.pd-80-l { padding-left: 80px;}
+ 	.pd-85-l { padding-left: 85px;}
+ 	.pd-90-l { padding-left: 90px;}
+ 	.pd-95-l { padding-left: 95px;}
+ 	.pd-100-l{ padding-left: 100px;}
+ 	
+ 	.pd-5-top  { padding-top: 5px;}     
+ 	.pd-10-top { padding-top: 10px;}
+ 	.pd-15-top { padding-top: 15px;}
+ 	.pd-20-top { padding-top: 20px;}
+ 	.pd-25-top { padding-top: 25px;}
+ 	.pd-30-top { padding-top: 30px;}
+ 	.pd-35-top { padding-top: 35px;}
+ 	.pd-40-top { padding-top: 40px;}
+ 	.pd-45-top { padding-top: 45px;}
+ 	.pd-50-top { padding-top: 50px;}
+ 	.pd-55-top { padding-top: 55px;}
+ 	.pd-60-top { padding-top: 60px;}
+ 	.pd-65-top { padding-top: 65px;} 
+ 	.pd-70-top { padding-top: 70px;}
+ 	.pd-75-top { padding-top: 75px;}
+ 	.pd-80-top { padding-top: 80px;}
+ 	.pd-85-top { padding-top: 85px;}
+ 	.pd-90-top { padding-top: 90px;}
+ 	.pd-95-top { padding-top: 95px;}
+ 	.pd-100-top{ padding-top: 100px;}
+ 	
+ 	.mg-bottom-0  { margin-bottom: 0px;}
+ 	.mg-bottom-5  { margin-bottom: 5px;}
+ 	.mg-bottom-10 { margin-bottom: 10px;}
+ 	.mg-bottom-15 { margin-bottom: 15px;}
+ 	.mg-bottom-20 { margin-bottom: 20px;}
+ 	.mg-bottom-25 { margin-bottom: 25px;}
+ 	.mg-bottom-30 { margin-bottom: 30px;}
+ 	.mg-bottom-35 { margin-bottom: 35px;}
+ 	.mg-bottom-40 { margin-bottom: 40px;}
+ 	.mg-bottom-45 { margin-bottom: 45px;}
+ 	.mg-bottom-50 { margin-bottom: 50px;}
+ 	.mg-bottom-55 { margin-bottom: 55px;}
+ 	.mg-bottom-60 { margin-bottom: 60px;}
+ 	.mg-bottom-65 { margin-bottom: 65px;} 
+ 	.mg-bottom-70 { margin-bottom: 70px;}
+ 	.mg-bottom-75 { margin-bottom: 75px;}
+ 	.mg-bottom-80 { margin-bottom: 80px;}
+ 	.mg-bottom-85 { margin-bottom: 85px;}
+ 	.mg-bottom-90 { margin-bottom: 90px;}
+ 	.mg-bottom-95 { margin-bottom: 95px;}
+ 	.mg-bottom-100{ margin-bottom: 100px;}
+
