--- a/css/udt_media_queries.css
+++ b/css/udt_media_queries.css
@@ -379,7 +379,7 @@
 	.homepage{display: block; position:relative;height:auto !important}
 	.homepage .content{display:block; vertical-align:inherit;}
 	.homepage .content{max-width:290px;padding-bottom:100px;}
-	.page .content{max-width:290px;padding:140px 0 100px 0;}
+	.page .content{max-width:290px;}
 	.page .highlight{background-attachment:scroll; background-position:center center;}
   .git-four {
     background: #CDCFD0 url("/images/command_line_basics.png") no-repeat 0px 0px;
@@ -549,16 +549,39 @@
 	--------------------------------------------------------*/
 	
 	/*cols*/
-	.column_one_half, .column_one_third,.column_one_fourth,.column_two_thirds, .column_three_fourths, .circular_img {width:100%; margin-right:0px;margin-left:0px;}
+	.column_one_half, .column_one_third,.column_one_fourth,.column_two_thirds, 
+	.column_three_fourths, .circular_img {
+	  width:100%; 
+	  margin-right:0px;
+	  margin-left:0px;
+	}
 	
 	/*accordions and tabs*/
 	.accordion div.video, .accordion div.video .featured_flowplayer,
-	.tabs div.video, .tabs div.video .featured_flowplayer { clear:both; width:260px !important; height:146px !important; }
-	div.video video, div.video iframe, div.video object, div.video embed, div.video div { width:100%; height:100% !important; max-width:100% !important; max-height:100% !important; }
-	.accordion .column_one_half, .accordion .column_one_third, .accordion .column_one_fourth, .accordion .column_two_thirds, .accordion .column_three_fourths,
-	.tabs .column_one_half, .tabs .column_one_third, .tabs .column_one_fourth, .tabs .column_two_thirds, .tabs .column_three_fourths { width:260px !important; margin-right:0 !important; }
-	blockquote { width:250px !important; margin-right:0 !important; }
-	.accordion blockquote, .tabs blockquote { width:209px !important; margin-right:0 !important; }
+	.tabs div.video, .tabs div.video .featured_flowplayer { 
+	  clear:both; 
+	  width:260px !important; 
+	  height:146px !important;
+	 }
+	div.video video, div.video iframe, div.video object, div.video embed, div.video div { 
+	  width:100%; 
+	  height:100% !important; 
+	  max-width:100% !important; 
+	  max-height:100% !important; 
+	}
+	.accordion .column_one_half, .accordion .column_one_third, .accordion 
+	.column_one_fourth, .accordion .column_two_thirds, .accordion .column_three_fourths,
+	.tabs .column_one_half, .tabs .column_one_third, .tabs .column_one_fourth, 
+	.tabs .column_two_thirds, .tabs .column_three_fourths { 
+	  width:260px !important; margin-right:0 !important; 
+	}
+	blockquote { 
+	  width:250px !important; margin-right:0 !important; 
+	}
+	.accordion blockquote, .tabs blockquote { 
+	  width:209px !important; 
+	  margin-right:0 !important; 
+	}
 
 }
 
