am exploring how to paginate the categories, not yet figured it out. Need to tweak the category pagination plugin. More to come.

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -23,7 +23,7 @@
       <!--start pagination-->
       <div class="blog-pagination">	
         <ul>
-          <li><a class="active" href="/blog/">1</a></li>
+          <li><a class="active" href="/categories/core-basics/">1</a></li>
           <!-- <li><a href="">2</a></li>
           <li><a href="">3</a></li>
           <li><a href="">4</a></li> -->
