--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
         
         {% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}
         <li class="pd-25-r"><a {% if location == 'blog' %}class="active" {% endif %}href="/blog/">Blog</a></li>
-        <li class="pd-25-r"><a {% if location == 'tutorials' %}class="active" {% endif %}href="{{ site.baseurl}}/tutorials/">Tutorials</a></li>
+        <li class="pd-25-r"><a {% if location == 'command_line_basics' %}class="active" {% endif %}href="{{ site.baseurl}}/tutorials/command_line_basics">Tutorials</a></li>
         <li class="pd-25-r"><a {% if location == 'contact' %}class="active" {% endif %}href="/contact/">Contact</a></li>
       </ul> <!-- end navigation  -->
       <div class="clearfix"></div>
