--- a/_includes/header.html
+++ b/_includes/header.html
@@ -106,7 +106,7 @@
               	
               	{% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}
               	<li><a {% if location == 'blog' %}class="active" {% endif %}href="{{ site.baseurl}}/blog/">Blog</a></li>
-              	<li><a {% if location == 'tutorials' %}class="active" {% endif %}href="{{ site.baseurl}}/tutorials/">Tutorials</a></li>
+              	<li><a {% if location == 'command_line_basics' %}class="active" {% endif %}href="{{ site.baseurl}}/tutorials/command_line_basics">Tutorials</a></li>
               	<li><a {% if location == 'contact' %}class="active" {% endif %}href="{{ site.baseurl}}/contact/">Contact</a></li>
               	
               </ul> <!-- end navigation  -->
