updated how the icons change in the tuturorials

--- a/_includes/contact_form_2.html
+++ b/_includes/contact_form_2.html
@@ -74,10 +74,10 @@
           <h6 class="widgettitle"><span>Connect with Us</span></h6>
           <!--social networks-->
           <ul class="socialSmall odd">
-            <li><a class="pinterest" href=""></a></li>
-            <li><a class="twitter" href=""></a></li>
-            <li><a class="facebook" href=""></a></li>
-            <li><a class="skype" href=""></a></li>
+            <li><a class="pinterest" href="http://www.pinterest.com/amendoza3092/boards/" target="_blank"></a></li>
+            <li><a class="twitter" href="https://twitter.com/railsbridgela" target="_blank"></a></li>
+            <li><a class="facebook" href="" target="_blank"></a></li>
+            <!-- <li><a class="skype" href=""></a></li> -->
           </ul>
         </li>
       </ul>
