--- a/css/style.css
+++ b/css/style.css
@@ -1791,7 +1791,7 @@
     margin-bottom: 15px;
     color: #fff;
     background-color: #555;
-    padding: 5px 0 5px 10px;
+    padding: 5px 10px;
     font-size: 100%;
     font-weight: 500;
   }
